--- a/test.html
+++ b/test.html
@@ -3,6 +3,6 @@
 <h1>Добавляем заголовок страницы</h1>
 <p>Здесь распологается параграф хидера</p>
 
-
+<p>Здесь добавлен новый параграф</p>
 
 </header>
